# project_bot

./: .gitignore  language.json  loader.py  main.py  pyproject.toml
buttons/: __init__.py  get_buttons.py  main_buttons.py  settings_buttons.py
db/: __init__.py  database.py  models.py
handlers/: __init__.py  bio.py  comment.py  set_languages.py  settings.py  start.py
handlers/give_order/: __init__.py  basket.py  give_order.py
keyboards/: __init__.py  give_order_keyboards.py  main_keyboard.py  make_keyboard.py  settings.py
migrations/: env.py
migrations/versions/: cdb0c6a163a9_migrations1.py
states/: __init__.py  comment_state.py  settings_state.py
states/give_order_states/: basket.py  give_order_state.py
utils/: __init__.py  config.py  notify_admins.py
utils/db_api/: postgresql.py
